--- a/vignettes/using_mask_names.qmd
+++ b/vignettes/using_mask_names.qmd
@@ -34,30 +34,35 @@ glimpse(williams)
 
 ```
 
-We will apply masking to the variables related to life history strategy, which are prefixed with `SexUnres`, `Impuls`, `Opport`, `InvEdu`, and `InvChild`. The `mask_names()` function will rename these variables to generic names like `variable_set_A_01`, `variable_set_A_02`, etc., where “A” indicates the first set of variables being masked. This way, we can specify variables that should load to the same component without knowing their actual names. Note that the order of new names is randomized, so we don’t exactly know which original variable corresponds to which masked name.. The `mask_names()` function will rename these variables to generic names like `variable_set_A_01`, `variable_set_A_02`, etc., where "A" indicates the first set of variables being masked. This way, we can specify variables that should load to the same component without knowing their actual names. Note that the order of new names is randomized, so we don't exactly know which original variable corresponds to which masked name.
+We will apply masking to the variables related to life history strategy, which are prefixed with `SexUnres`, `Impuls`, `Opport`, `InvEdu`, and `InvChild`. We'll mask each variable group separately with randomized letter prefixes (e.g., `C_01`, `A_01`, `E_01`, etc.). This way, variables within the same original scale keep a common prefix for the analysis, but analysts won't know which prefix corresponds to which original scale due to the randomization.
 
 
 ```{r}
 set.seed(84)
 
+# Sample 5 random letters for the 5 variable groups
+random_prefixes <- paste0(sample(LETTERS, 5), "_")
+
 masked_williams <-
     williams |> 
-    mask_names(starts_with("SexUnres"),
-               starts_with("Impul"),
-               starts_with("Opport"),
-               starts_with("InvEdu"),
-               starts_with("InvChild"))
+    mask_names(starts_with("SexUnres"), prefix = random_prefixes[1]) |>
+    mask_names(starts_with("Impul"), prefix = random_prefixes[2]) |>
+    mask_names(starts_with("Opport"), prefix = random_prefixes[3]) |>
+    mask_names(starts_with("InvEdu"), prefix = random_prefixes[4]) |>
+    mask_names(starts_with("InvChild"), prefix = random_prefixes[5])
 
+# Show the randomized prefixes used (but not which corresponds to which)
+sort(unique(sub("_.*", "_", grep("^[A-Z]_", names(masked_williams), value = TRUE))))
 ```
 
-We can now perform an exploratory factor analysis (EFA) on the masked variables. Since the variable names are masked, we won’t know which original variables correspond to which factor, thus preventing bias in interpreting the results.
+We can now perform an exploratory factor analysis (EFA) on the masked variables. Since the variable names are masked with randomized prefixes, we won't know which original variables correspond to which factor, thus preventing bias in interpreting the results.
 
 ```{r}
 
 set.seed(123)
 efa_blind <-
     masked_williams |> 
-    select(starts_with("variable_set_")) |>
+    select(matches("^[A-Z]_")) |>
     factanal(factors = 5, rotation = "varimax")
     
 # Get the loadings of the EFA on the masked data
