Add mandatory references

--- a/inst/bibliography.bib
+++ b/inst/bibliography.bib
@@ -673,3 +673,26 @@ URL = {https://jasp-stats.org/}
   language  = "en"
 }
 
+@Manual{R2025,
+title = {R: A Language and Environment for Statistical Computing},
+author = {{R Core Team}},
+organization = {R Foundation for Statistical Computing},
+address = {Vienna, Austria},
+year = {2025},
+url = {https://www.R-project.org/},
+}
+
+@MISC{Nagy2026-gb,
+  title     = "vazul: An {R} package for analysis blinding",
+  author    = "Nagy, Tam\'{a}s and Kov\'{a}cs, M\'{a}rton and Sarafoglou,
+               Alexandra",
+  publisher = "Zenodo",
+  abstract  = "vazul is an R package for data analysis blinding in research
+               contexts. It offers two main approaches to anonymize data while
+               preserving analytical validity: masking (replacing values with
+               anonymous labels) and scrambling (randomizing the order of
+               existing values).",
+  year      =  2026,
+  url       = "http://dx.doi.org/10.5281/zenodo.18269712",
+  doi       = "10.5281/ZENODO.18269712"
+}
