--- a/manuscript/vazul_manuscript_jss.Rmd
+++ b/manuscript/vazul_manuscript_jss.Rmd
@@ -69,7 +69,7 @@ Analysis blinding ties in with other methodologies to minimize bias in the resea
 
 Although many blinding techniques are conceptually straightforward, such as scrambling outcome variables or masking variable names and factor labels, their practical implementation can become technically challenging once real research designs and data structures are considered. For instance, in hierarchical models, researchers may need to scramble the outcome variable to destroy the effect of interest while still preserving information within grouping levels, such as country-level means in cross-cultural datasets [e.g., @sarafoglou2023comparing]. Similarly, in repeated-measures designs, condition labels may need to be masked so that each participant’s condition structure is preserved while permuting the mapping of conditions across participants to obscure the true experimental effect. These complexities make manual analysis blinding difficult to carry out consistently and correctly. To lower barriers for data managers and facilitate the broader adoption of analysis blinding in research labs, dedicated software tools, such as \proglang{R} packages, are needed to implement these procedures reliably.
 
-To meet this need, the \pkg{vazul}^[Vazul was an 11th-century Hungarian prince of the Árpád dynasty, a cousin of King Stephen I (c. 975–1038). Around 1031, Vazul was blinded—according to contemporary chronicles-to make him unfit for succession to the throne. In the same spirit, the \pkg{vazul} package helps create blinded data that are unfit for p-hacking.] package in \proglang{R} \url{(https://CRAN.R-project.org/package=vazul)} offers flexible and reproducible tools for implementing analysis blinding. The \proglang{R} package provides functionality for data scrambling as well as data and variable masking. In the remainder of this article, we introduce the methodology in more detail, describe the functionalities of the \pkg{vazul} package, and illustrate its application through practical examples. We conclude with a brief discussion and outline future directions.
+To meet this need, the \pkg{vazul}^[Vazul was an 11th-century Hungarian prince of the Árpád dynasty, a cousin of King Stephen I (c. 975–1038). Around 1031, Vazul was blinded—according to contemporary chronicles-to make him unfit for succession to the throne. In the same spirit, the \pkg{vazul} package helps create blinded data that are unfit for p-hacking.] package  [@Nagy2026-gb] in \proglang{R} [@R2025] offers flexible and reproducible tools for implementing analysis blinding. The \proglang{R} package provides functionality for data scrambling as well as data and variable masking. In the remainder of this article, we introduce the methodology in more detail, describe the functionalities of the \pkg{vazul} package, and illustrate its application through practical examples. We conclude with a brief discussion and outline future directions.
 
 ## Analysis Blinding: Safeguarding Against Bias Without Preregistration
 
@@ -96,7 +96,7 @@ The package provides functions for two main types of analysis blinding:
 
 When choosing between masking and scrambling for analysis blinding, the decision usually turns on what information must be concealed and what structure must be preserved to allow for the development of a suitable analysis pipeline. Masking is most appropriate when the risk lies in the labels of categories rather than their relationships. By replacing group names (e.g., 'Treatment' and 'Control') with arbitrary codes (e.g., 'Group A' and 'Group B'), the group allocation is preserved. This allows analysts to perform group-level operations—such as ANOVA or regression—while remaining blinded to the substantive identity of those groups. Note, that since group-level distinctions remain intact, masking is best suited for workflows where knowing the direction of a difference would not inadvertently reveal the underlying category meaning. Masking also accommodates cases where different variables require different relabeling schemes or prefixes, for example when several independent categorical factors need to remain distinguishable but substantively opaque. This approach is common in clinical trials, behavioral experiments, and preregistered confirmatory analyses where preserving the structure of factors is essential but knowledge of factor identity would bias analytic choices. For instance, an analyst can check for data consistency across four masked study sites (e.g., "Site A" through "Site D") to ensure uniform data quality without knowing the specific geographic locations. This preserves the site-level grouping for variance testing while preventing biased assumptions about data from specific regions.
 
-Masking can be indispensable in situations where the variable names themselves carry substantive meaning. This occurs, for example, in network analysis, where variables become nodes with interpretable labels, or in factor-analytic work, where item names often hint at their latent content [@Hoekstra2025-ub]. In such settings, simply scrambling values would not prevent analysts from inferring the underlying constructs, whereas masking removes this semantic cue entirely. The `vazul` package supports this use case directly by offering functionality for masking variable names alongside their values.
+Masking can be indispensable in situations where the variable names themselves carry substantive meaning. This occurs, for example, in network analysis, where variables become nodes with interpretable labels, or in factor-analytic work, where item names often hint at their latent content [@Hoekstra2025-ub]. In such settings, simply scrambling values would not prevent analysts from inferring the underlying constructs, whereas masking removes this semantic cue entirely. The \pkg{vazul} package supports this use case directly by offering functionality for masking variable names alongside their values.
 
 Scrambling becomes the better choice when the goal is to preserve the marginal distributions of numeric variables while severing their hypothesized associations. It is particularly useful in settings where analysts need access to realistic distributions—variance, skew—to make decisions about transformations, model families, or robustness checks, yet must remain blind to the relationship between predictors and outcomes. By permuting values within variables, scrambling prevents recognition of treatment or experimental effects, correlations, or temporal patterns, making it harder to inadvertently tune an analysis toward the desired result. It is often the preferred option in longitudinal studies, high-dimensional observational datasets where categorical relabeling would either destroy important numeric structure or be easy to reverse-engineer (e.g., in case of three experimental conditions, the researcher may guess which one is which based on the means). Scrambling is generally the more versatile option, because it can be applied across variable types and adapts well to a wide range of study designs and analytic workflows. Its ability to break associations while preserving distributions makes it suitable for almost everything from tightly controlled experiments to complex observational datasets, including high-dimensional or mixed-format data [@Sarafoglou2025-fr; @Sarafoglou2023-rf].
 
@@ -113,7 +113,7 @@ Scrambling becomes the better choice when the goal is to preserve the marginal d
 :Comparison of masking and scrambling approaches for analysis blinding.
 
 
-In the `vazul` package, each approach is available at three levels:
+In the \pkg{vazul} package, each approach is available at three levels:
 
 - **Vector level**: `mask_labels()` and `scramble_values()` - operate on single vectors
 - **Data frame level**: `mask_variables()` and `scramble_variables()` - operate on columns in a data frame
@@ -137,6 +137,8 @@ All of the functions require a data frame or vector as input and return a modifi
 | `scramble_variables_rowwise()` | Row-wise | Scramble values within rows |
 : Overview of vazul functions for masking and scrambling data
 
+The \pkg{vazul} package is open source and distributed via CRAN and GitHub  (\url{https://github.com/nthun/vazul}). All analyses reported here were conducted using version 1.0.0.
+
 In the following sections, we provide detailed descriptions and examples for each of these functions, illustrating their use cases and practical applications in research workflows. We starts with setting up the environment and loading the included datasets.
 
 ```{r setup, message=FALSE}
@@ -151,7 +153,7 @@ data(williams)
 
 ## Included datasets
 
-The `vazul` package includes two research datasets for demonstration and practice. The `marp ` dataset contains cross-national survey data on religiosity [@MARP2022discussion], while the `williams` dataset contains experimental data from a stereotyping study [@Sarafoglou2025-fr].
+The \pkg{vazul} package includes two research datasets for demonstration and practice. The `marp ` dataset contains cross-national survey data on religiosity [@MARP2022discussion], while the `williams` dataset contains experimental data from a stereotyping study [@Sarafoglou2025-fr].
 
 ## Masking functions
 
